# vehicle

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt
configs/experiments/: exp01_base_dissipation.yaml
docs/: LICENSE-DOCS.md  README.md  architecture.md  github_upload.md  reproducibility.md
docs/experiments/: exp01_base_dissipation.md
experiments/: exp01_base_dissipation.py
scripts/: install_and_run_exp01.py  plot_exp01_base_dissipation.py  run_exp01_base_dissipation.py  validate_exp01.py
tests/: test_attractors.py  test_eiarv.py  test_exp01_integration.py  test_governance.py  test_observables.py  test_vehicle_core.py
vehicle/: __init__.py  attractors.py  eiarv.py  governance.py  observables.py  state.py  tension.py
