[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-systems-lab"
version = "0.1.0"
description = "VEHICLE Systems Lab: structural tension modeling, projection-governed dynamics, and reproducible experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Roberto Borda Milan" }
]
license = { text = "Apache-2.0" }
keywords = [
  "complex systems",
  "graph dynamics",
  "reproducibility",
  "scientific computing",
  "tension modeling"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "networkx>=3.1",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=5.13",
  "plotly>=5.18",
  "kaleido>=0.2.1",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[project.urls]
Homepage = "https://github.com/vehiclesystemslab/vehicle"
Repository = "https://github.com/vehiclesystemslab/vehicle"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vehicle*"]
exclude = [
  "tests*",
  "docs*",
  "experiments*",
  "scripts*",
  "manuscripts*",
  "results*",
  "figures*",
  "data*",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
